// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`switch should allow to custom active-value and inactive-value 1`] = `
<wx-view
  class="smart-switch smart-switch--on custom-class"
  style="font-size:30px;background:#07c160"
  bind:tap="onClick"
>
  <wx-view
    class="smart-switch__center"
  >
    <wx-view
      class="smart-switch__label"
    >
      <wx-view
        class="smart-switch__label_active"
      >
        
      </wx-view>
      <wx-view
        class="smart-switch__label_inactive"
      >
        
      </wx-view>
    </wx-view>
    <wx-view
      class="smart-switch__node node-class"
    />
  </wx-view>
</wx-view>
`;

exports[`switch should allow to custom active-value and inactive-value 2`] = `
<wx-view
  class="smart-switch custom-class"
  style="font-size:30px;background:#ee0a24"
  bind:tap="onClick"
>
  <wx-view
    class="smart-switch__center"
  >
    <wx-view
      class="smart-switch__label"
    >
      <wx-view
        class="smart-switch__label_active"
      >
        
      </wx-view>
      <wx-view
        class="smart-switch__label_inactive"
      >
        
      </wx-view>
    </wx-view>
    <wx-view
      class="smart-switch__node node-class"
    />
  </wx-view>
</wx-view>
`;
